finalied layout and added background colors to headers

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <!-- Header -->
       <header id="header">
         <div class="logo">
-          <span class="icon fa-gem"></span>
+          <span class="icon fa-heart"></span>
         </div>
         <div class="content">
           <div class="inner">
@@ -60,7 +60,9 @@
       <div class="weapon">
         <h2>WEAPON</h2>
         <p>
-          <code>Expidition Tree</code> <code>Rarity 5</code>
+          <code>Expidition Tree</code>
+          <code>Hope IV</code>
+          <code>Rarity 5</code>
         </p>
       </div>
 
@@ -440,7 +442,7 @@
 
       <!-- MISC -->
       <div class="misc">
-        <h2>MISCELLANEOUS</h2>
+        <h2>MISCELLANEOUS RULES</h2>
         <ul>
           <li>
             Before starting, enter the <code>TRAINING AREA</code> to
@@ -851,7 +853,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
       <!-- Footer -->
       <footer id="footer">
         <p class="copyright">
-          Website made by <a href="https://x.com/KotierWolf">KotierWolf</a> <br>&copy;Template Design used from: <a href="https://html5up.net">HTML5 UP</a>.
+          Website made by <a href="https://x.com/KotierWolf" target="_blank">KotierWolf</a> <br>&copy;Template Design used from: <a href="https://html5up.net">HTML5 UP</a>.
         </p>
       </footer>
     </div>
