fixed div issue on Allowed

--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
       <!-- LOADOUT -->
       <div class="loadout">
         <h2>LOADOUT</h2>
-        <h3>ALLOWED &#x2713;</h3>
-		<div class="allowed">
+        <div class="allowed">
+      <h3>ALLOWED &#x2713;</h3>
 			 
-			<a
-            href="https://game8.co/games/Monster-Hunter-Wilds/archives/503802"
+		
+            <a href="https://game8.co/games/Monster-Hunter-Wilds/archives/503802"
             target="_blank"
-            ><img src="images//allowed/ancientpotion.png" alt="" srcset=""
-          /></a>
+            ><img src="images//allowed/ancientpotion.png" alt="" srcset=""/></a>
+          
 
           <a
             href="https://game8.co/games/Monster-Hunter-Wilds/archives/501852"
